--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["918731030752@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "Astro - Heartless - md bot",
-    "instagram" : "https://instagram.com/zeeoneofc",
+    "ownerNumber": ["918731030752@s.whatsapp.net","918787599649@s.whatsapp.net"],
+    "ownerName": "亗•|ʀɪɴ☆᭄",
+    "instagram" : "http://instagram.com/kenoske_official",
     "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Heartless Haruka-Mdོ ",
+    "botName": "RIN Haruka-Mdོ ",
     "footer": "2023 © api.zeeoneofc.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
